--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "w-project",
   "version": "0.0.0",
   "description": "List all the projects in the workspaces and choose the one to open in editor",
-  "main": "dist/index.js",
+  "bin": "dist/index.js",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/index.ts"
+    "build": "tsc && chmod +x dist/index.js",
+    "dev": "ts-node src/index.ts",
+    "test": "jest"
   },
   "author": "Ajay Narain Mathur <ajaynarainmathur@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
+    "jest": "^25.1.0",
+    "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
   },
