--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc && chmod +x dist/index.js",
     "dev": "ts-node src/index.ts",
-    "test": "jest"
+    "test": "rm -rf dist && jest"
   },
   "author": "Ajay Narain Mathur <ajaynarainmathur@gmail.com>",
   "license": "MIT",
@@ -14,6 +14,7 @@
     "@types/jest": "^25.1.3",
     "@types/node": "^13.7.7",
     "jest": "^25.1.0",
+    "mock-fs": "^4.11.0",
     "ts-jest": "^25.2.1",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.3"
